# practice_devops

./: .gitignore  README.md
.github/workflows/: basic-ci.yaml
basic-ci/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
basic-ci/basic_ci/: datamodel.py  main.py
basic-ci/src/basic_ci/: datamodel.py  main.py  service.py
basic-ci/tests/: test_main.py  test_service.py
cd/apps/: nginx.yaml
cd/simple-nginx/: nginx.yaml
loki-cloud/: README.md  logger.toml  main.py  pyproject.toml
loki-cloud/promtail/: config.yaml  norm-config.yaml
ml-ci/: pyproject.toml
ml-ci/ml_ci/data_pipeline/: data_loader.py  data_model.py
ml-ci/tests/: datamodel.py  schema.py  test_data_loader.py
