[tool.poetry]
name = "loki-cloud"
version = "0.1.0"
description = ""
authors = ["Seungbae Ji <seungbae.ji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-json-logger = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
