[tool.poetry]
name = "ml-ci"
version = "0.1.0"
description = ""
authors = [
    "Seungbae Ji <seungbae.ji@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"


[tool.poetry.group.eda.dependencies]
jupyter = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
pandera = "^0.20.3"
pytest-cov = "^5.0.0"

[build-system]
requires = [
    "poetry-core",
]
build-backend = "poetry.core.masonry.api"
